--- a/index.css
+++ b/index.css
@@ -3,3 +3,25 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  background-color: rgb(241, 241, 241);
+}
+
+
+header {
+  background-color: black;
+  padding: 2em 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-family: "Sixtyfour Convergence", sans-serif;
+  font-size: 1.3rem;
+}
+
+main {
+  background-color: rgb(255, 255, 255);
+}
