--- a/index.css
+++ b/index.css
@@ -8,6 +8,9 @@
 
 body {
   background-color: rgb(241, 241, 241);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 body,
@@ -36,6 +39,7 @@ h1 {
 
 main {
   background-color: rgb(255, 255, 255);
+  flex-grow: 1;
 }
 
 .add-expense-container,
