--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: rgb(241, 241, 241);
+  background-color: rgb(255, 255, 255);;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -32,6 +32,11 @@ header {
   align-items: center;
 }
 
+.width-setter-div {
+  flex: 1;
+  max-width: 1020px;
+}
+
 h1 {
   font-family: "Sixtyfour Convergence", sans-serif;
   font-size: 1.3rem;
@@ -40,6 +45,42 @@ h1 {
 main {
   background-color: rgb(255, 255, 255);
   flex-grow: 1;
+  width: 100%;
+  max-width: 425px;
+  margin: 0 auto;
+}
+
+.canvas-wrapper {
+  width: 200px;
+  height: 200px;
+  margin: 3em auto 1.5em;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.chart-place-holder {
+  width: 175px;
+  height: 175px;
+  background-color: rgb(45, 111, 197);
+  position: absolute;
+  top: 0;
+  border-radius: 50%;
+  color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+}
+
+.export-btn {
+  position: absolute;
+  top: 0;
+  left: -20px;
+  background-color: transparent;
+  border: none;
 }
 
 .add-expense-container,
@@ -186,39 +227,6 @@ form>button:active {
   font-weight: 500;
 }
 
-.canvas-wrapper {
-  width: 200px;
-  height: 200px;
-  margin: 1.5em auto;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.chart-place-holder {
-  width: 175px;
-  height: 175px;
-  background-color: rgb(45, 111, 197);
-  position: absolute;
-  top: 0;
-  border-radius: 50%;
-  color: whitesmoke;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 1rem;
-}
-
-.export-btn {
-  position: absolute;
-  top: 0;
-  left: -20px;
-  background-color: transparent;
-  border: none;
-}
-
 .cap-setter,
 .success-module,
 .over-billion-module,
@@ -347,4 +355,60 @@ form>button:active {
   width: 100%;
   z-index: 99;
   top: 0;
+}
+
+@media (min-width: 500px) {
+  .canvas-wrapper {
+    width: 250px;
+    height: 250px;
+  }
+  
+  .chart-place-holder {
+    width: 215px;
+    height: 215px;
+  }
+}
+
+@media (min-width: 900px) {
+
+  .width-setter-div {
+    padding: 0 2em;
+    flex: 1;
+    max-width: 1020px;
+  }
+
+  main {
+    width: 100%;
+    max-width: 1020px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 7fr 8fr;
+    gap: 0.3em;
+    grid-template-rows: auto 1fr;
+    border-left: 1px solid rgb(233, 233, 233);
+    border-right: 1px solid rgb(233, 233, 233);
+  }
+
+  
+  .canvas-wrapper {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .all-expenses {
+    grid-column: 1;
+    grid-row: 2;
+    max-width: 425px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .content-settigns-content {
+    padding-top: 2em;
+    grid-column: 2;
+    grid-row: 1 / 3;
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+  }
 }
