--- a/index.css
+++ b/index.css
@@ -306,19 +306,21 @@ form>button:active {
 
 .success-module {
   padding: 1em;
-  background-color: #28a746;
+  background-color: #008020;
   color: whitesmoke;
   letter-spacing: 0.08em;
   
 }
 
 .over-billion-module {
-  background-color: #a66cff;
-  color: rgb(255, 255, 255);
+  background-color: #7E57B7;
+  color: #ffffff;
   width: 80%;
   padding: 1em;
   border-radius: 0.5em;
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  max-width: 300px;
+  text-align: center;
 }
 
 .cap-warning {
@@ -388,6 +390,19 @@ form>button:active {
   z-index: 99;
   top: 0;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -0.06em;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 
 @media (min-width: 500px) {
   .canvas-wrapper {
